<resources>
    <string name="app_name">UNNOBA ReciclAR</string>
    <string name="boton1">Contenedor</string>
    <string name="boton2">Residuo</string>
    <string name="boton3">Recordatorio</string>
    <string name="boton4">ReciclAR</string>
    <string name="boton_back">Volver</string>
    <string name="boton_home">Home</string>
    <string name="boton_reloj">Reloj</string>
    <string name="txt_hora">Hora Seleccionada</string>
    <string name="txt_selec_hora">↓↓ Seleccione la hora ↓↓</string>
    <string name="chk_lun">Lunes</string>
    <string name="chk_mar">Martes</string>
    <string name="chk_mie">Miércoles</string>
    <string name="chk_jue">Jueves</string>
    <string name="chk_vie">Viernes</string>
    <string name="chk_sab">Sábado</string>
    <string name="chk_dom">Domingo</string>
    <string name="boton_add">Agregar</string>
    <string name="txt1">Contenedores</string>
    <string name="txt2">Residuos</string>
    <string name="txt3">Recordatorios</string>
    <string name="txt4">Nuevo Recordatorio</string>
    <string name="title_ContenedorAzul">Contenedor Azul</string>
    <string name="title_ContenedorAmarillo">Contenedor Amarillo</string>
    <string name="title_ContenedorVerde">Contenedor Verde</string>
    <string name="title_ContenedorNaranja">Contenedor Naranja</string>
    <string name="lbl_Azul">Azul</string>
    <string name="lbl_Amarillo">Amarillo</string>
    <string name="lbl_Verde">Verde</string>
    <string name="lbl_Naranja">Naranja</string>
    <string name="descripcion_Azul_01">¡La campana azul acepta todo tipo de papel y cartón!</string>
    <string name="descripcion_Azul_02">¡Recuerda que los residuos deben estar limpios y secos!</string>
    <string name="descripcion_Azul_03">Todos los envases de cartón que usamos se pueden reciclar: cajas de galletas, de cereales, de zapatos, de productos congelados, hueveras de cartón, etc.</string>
    <string name="descripcion_Azul_04">Son aptos para reciclaje los periodicos, libros, revistas y bolsas de papel.</string>
    <string name="descripcion_Azul_05">TIP: Puedes reutilizar las bolsas de papel para llevar estos residuos y los envases de cartón a la Campana Azul.</string>
    <string name="switch_reloj">Activar/Desactivar</string>
    <string name="txt_dias">Dias</string>
    <string name="txt_select_dias">Dias Seleccionados</string>
    <string name="boton_conf_dias">Confirmar dias</string>
</resources>
