<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_amarillo"
    tools:context=".ContenedorAmarillo"
    android:padding="10dp">

    <ImageButton
        android:id="@+id/btn_home3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/boton_home"
        android:onClick="goHome"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_verde"
        app:layout_constraintVertical_bias="0.692"
        app:srcCompat="@mipmap/boton_home" />

    <ImageButton
        android:id="@+id/btn_back3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/boton_back"
        android:onClick="Volver"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_naranja"
        app:layout_constraintVertical_bias="0.666"
        app:srcCompat="@mipmap/boton_back" />

    <TextView
        android:id="@+id/lbl_contenedorAmarillo"
        android:layout_width="239dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="casual"
        android:text="@string/title_ContenedorAmarillo"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerId"
        android:layout_width="match_parent"
        android:layout_height="127dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/lbl_contenedorAmarillo"
        tools:layout_editor_absoluteX="10dp" />

</android.support.constraint.ConstraintLayout>